--- a/src/app/posts/post-dashboard/post-dashboard.component.html
+++ b/src/app/posts/post-dashboard/post-dashboard.component.html
@@ -1,3 +1,8 @@
-<p>
-  post-dashboard works!
-</p>
+<mat-form-field>
+  <input matInput placeholder="Post Title"[(ngModel)]="title">
+</mat-form-field><br>
+<mat-form-field>
+  <textarea matInput placeholder="Content"[(ngModel)]="content"></textarea>
+</mat-form-field>
+<br>
+<button mat-raised-button collor="accent" (click)="createPost()">Create Post</button>
