--- a/src/app/posts/post-dashboard/post-dashboard.component.html
+++ b/src/app/posts/post-dashboard/post-dashboard.component.html
@@ -1,8 +1,19 @@
-<mat-form-field>
-  <input matInput placeholder="Post Title"[(ngModel)]="title">
-</mat-form-field><br>
-<mat-form-field>
-  <textarea matInput placeholder="Content"[(ngModel)]="content"></textarea>
-</mat-form-field>
-<br>
-<button mat-raised-button collor="accent" (click)="createPost()">Create Post</button>
+<section>
+  <mat-accordion>
+    <mat-expansion-panel>
+      <mat-expansion-panel-header>
+        <mat-panel-title>
+          Create a Post
+        </mat-panel-title>
+      </mat-expansion-panel-header>
+      <mat-form-field>
+        <input matInput placeholder="Post Title" [(ngModel)]="title">
+      </mat-form-field><br>
+      <mat-form-field>
+        <textarea matInput placeholder="Content" [(ngModel)]="content" rows="10"></textarea>
+      </mat-form-field>
+      <br>
+      <button mat-raised-button color="accent" (click)="createPost()" [disabled]="!title || !content">{{buttonText}}</button>
+    </mat-expansion-panel>
+  </mat-accordion>
+</section>
