--- a/src/app/posts/post-list/post-list.component.css
+++ b/src/app/posts/post-list/post-list.component.css
@@ -1,15 +1,11 @@
-section{
+section {
   display: grid;
-  grid-template-columns: repeat(auto-fit,minmax(300px,1fr));
-  grid-auto-rows: auto;
+  grid-template-columns: repeat(auto-fit, minmax(300px,1fr));
+  grid-template-rows: auto;
   grid-gap: 10px;
   margin: 0 auto;
-  max-width: 95%;
+  max-width: 90%;
 }
-mat-card{
-  margin: 10px 0 ;
-  max-width: 700px;
-}
-img{
-  width: 100%;
+mat-card {
+  margin: 10px 0;
 }
