--- a/src/app/posts/post-list/post-list.component.html
+++ b/src/app/posts/post-list/post-list.component.html
@@ -4,7 +4,7 @@
         <img mat-card-image src="{{post.image}}" alt="{{post.title}}">
         <h2>{{post.title}}</h2>
         <p>
-          <small>Posted by {{post.author}} &bull; on {{post.published | date:"fullDate"}}</small>
+          <small>Posted by {{post.author}} &bull; on {{post.published}}</small>
         </p>
       </mat-card-content>
       <mat-card-actions align="end" *ngIf="auth.currentUserId === post.authorId">
